--- a/src/theme/index.css
+++ b/src/theme/index.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=JetBrains+Mono:wght@400;700&display=swap');
+
+:root {
+	--font-primary: 'Poppins', sans-serif;
+	--font-secondary: 'JetBrains Mono', monospace;
+}
+
 body {
-	margin: 0;
-	font-family:
-		-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	font-family: var(--font-primary);
 }
